[package]
name = "ascii_video_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "6.0.0"
image = "0.24.6"
terminal_size = "0.2.6"
clap = { version = "4.3.9", features = ["derive"] }
crossterm = "0.26.1"
log = "0.4.19"
pretty_env_logger = "0.5.0"
anyhow = "1.0.75"
rusttype = "0.9.3"
imageproc = "0.23.0"
once_cell = "1.18.0"
