[package]
name = "ascii_video_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.0.0"
image = "0.25.1"
terminal_size = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
anyhow = "1.0.81"
rusttype = "0.9.3"
imageproc = "0.24.0"
once_cell = "1.19.0"
